[package]
name = "svg-invert"
version = "0.0.2"
edition = "2021"
authors = ["Luciano Mammino"]
description = "A CLI utility and a library to invert colors in an SVG image"
repository = "https://github.com/lmammino/svg-invert"
keywords = ["svg", "invert", "colors", "cli", "library"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"

[dependencies]
csscolorparser = "0.6.2"
thiserror = "1.0.60"
xml-rs = "0.8.20"
